# monarch-phenology-inaturalist

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  TAXA_ANALYSIS_README.md  compose.yaml  gbif_taxa_analysis.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
examples/: example_usage.sh
prompts/: v1.txt
src/monarch_phenology/: classify_openrouter.py  cli.py  config.py  db.py  inat_client.py  ingest_inat.py  logging_utils.py  openrouter_client.py  prompts.py
